--- a/package.json
+++ b/package.json
@@ -1,6 +1,8 @@
 {
   "dependencies": {
-    "micro": "^9.3.4"
+    "micro": "^9.3.4",
+    "node-fetch": "^2.6.0",
+    "url-parse": "^1.4.7"
   },
   "main": "index.js",
   "scripts": {
